# SFML-Snake

./: .gitignore  CMakeLists.txt  README.md  README.me  build.sh  main.cpp  run.sh  snake
.github/workflows/: cmake-single-platform.yml  codeql.yml
Snake_logic/: CMakeLists.txt
Snake_logic/include/snake_logic/: Block.h  Food.h  Head.h  Snake.h  game_setup.h
Snake_logic/src/: Block.cpp  Food.cpp  Head.cpp  Snake.cpp
